# poll-git-repo-changes

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
license_common/: Cargo.toml
license_common/src/: lib.rs
license_server/: Cargo.toml
license_server/src/: main.rs
src/: actor.rs  git.rs  main.rs
