[workspace]
members = [".", "license_client", "license_common", "license_server"]

[workspace.dependencies]
async-trait = "0.1.89"
gitpatch = "0.7.1"
ractor = { version = "0.15.10", features = ["async-trait"] }
serde = "1.0.228"
serde_json = "1.0.146"
tokio = { version = "1.48.0", features = ["full"] }
tracing = { version = "0.1.44", features = ["log"] }
tracing-subscriber = { version = "0.3.22", features = ["fmt", "env-filter"] }

[package]
name = "actor_http_test"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = { workspace = true }
gitpatch = { workspace = true }
ractor = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[profile.dev.package.rand]
opt-level = 3

[profile.dev.package.rsa]
opt-level = 3

[profile.dev.package.sha2]
opt-level = 3
