[package]
name = "license_common"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.42", default-features = false, features = [
    "serde",
    "std",
    "now",
] }
postcard = { version = "1.1.3", features = ["alloc"] }
rsa = "0.9.9"
serde = { workspace = true, features = ["derive"] }
sha2 = "0.10.9"
